deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tropical-bawah-ingress
  namespace: test-app
spec:
  ingressClassName: nginx
  rules:
    - host: management-bawah.tropical.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tropical-bawah-web
                port:
                  number: 80
